--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
             <version>2.8.5</version>
         </dependency>
 
+        <!-- pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+
+
         <!-- spring security -->
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.boot</groupId>-->
